--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
     </section>
   </main>
   <!-- Подвал-->
-  <footer>
-    <div class="footer-design">
+  <footer class="footer-block base-container">
+        <div class="footer-design">
       <div class="footer-container">
         <a class="logo-footer" href="./index.html">
           <span class="web-part">Web</span><span class="web-footer">Studio</span></a>
@@ -389,6 +389,7 @@
         </form>
       </div>
     </div>
+    
   </footer>
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
