--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <main>
-    <section class="hero-title">
+    <section class="container hero-title">
       <div class="container">
         <h1 class="main-title">
           Эффективные решения <br />
@@ -324,8 +324,9 @@
     </section>
   </main>
   <!-- Подвал-->
-  <footer class="footer-block base-container">
-        <div class="footer-design">
+  <footer class="footer-block base-container ">
+        <div class="footer-design container">
+
       <div class="footer-container">
         <a class="logo-footer" href="./index.html">
           <span class="web-part">Web</span><span class="web-footer">Studio</span></a>
