--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <main>
-    <section class="container hero-title">
+    <section class="hero-title">
       <div class="container">
         <h1 class="main-title">
           Эффективные решения <br />
